--- a/style.css
+++ b/style.css
@@ -6,11 +6,20 @@ body {
     background-size: cover;
 }
 
-.container {
-    background-color: rgba(255, 255, 255, 0.8); /* Fundo branco semi-transparente */
+.container1 {
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 8px;
     max-width: 600px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.container2 {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 1000px;
     margin: 50px auto;
     text-align: center;
 }
@@ -33,8 +42,14 @@ input, select {
     border-radius: 4px;
 }
 
-input#nome{
-    width: 70%; /* Define a largura do campo de nome para 70% */
+.opções{
+    width: 90%;
+    background-color: white;
+}
+
+.opções2{
+    width: 40%;
+    background-color: white;
 }
 
 .row {
@@ -42,16 +57,18 @@ input#nome{
     justify-content: space-between;
 }
 
+.agendamento {
+    margin: 10px;
+    padding: 10px;
+}
+
 .column {
     flex: 1;
     margin-right: 10px;
+    margin-left: 10px;
 }
 
-.column:last-child {
-    margin-right: 0;
-}
-
-button {
+.botões {
     background-color: #28a745;
     color: white;
     padding: 10px;
@@ -60,7 +77,7 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.botões:hover {
     background-color: #218838;
 }
 
@@ -69,16 +86,28 @@ button:hover {
     color: green;
 }
 
-#listaDAgend {
-    margin-top: 20px;
+#agendForm {
+    padding: 10px;
 }
 
-.agendamento-item {
-    background-color: #e9ecef;
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
+#data:hover, #esporte:hover, #horario:hover {
+    border-color: blue;
+    cursor: pointer;
 }
-#esporte{
-    width: 50%;
+
+#nome:hover {
+    border-color: blue;
+}
+
+.btnEditar, .btnSalvar, .btnDeletar {
+    background-color: #5052d8;
+    color: white;
+    padding: 7px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btnEditar:hover, .btnSalvar:hover, .btnDeletar:hover {
+    background-color: #282188;
 }
